--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         <h6 class="text-capitalize text-light mb-3">contact us</h6>
                         <p>Get in touch with us via mail phone.We are waiting for your call or message</p>
                         <a href="#" class="btn rounded-pill main-btn shadow-none w-100 py-2 mt-3 mt-md-4 overflow-hidden">graphberry@gmail.com</a>
-                        <div class="brands d-flex gap-3 mt-4">
+                        <div class="brands d-flex gap-1 gap-lg-3 mt-4">
                             <a class="facebook text-white" href="#"><i class="fa-brands fa-facebook-f text-center"></i></a>
                             <a class="twitter text-white" href="#"><i class="fa-brands fa-twitter text-center"></i></a>
                             <a class="google-plus text-white" href="#"><i class="fa-brands fa-google-plus-g text-center"></i></a>
